# JaegerNet-Mupen64Plus-Input

./: .gitignore  LICENSE  README.md  bootstrap.bat  build.bat
Dependencies/installed/x64-windows/include/JaegerNetServer/: JaegerNetServer.h  JaegerNet_ErrorCodes.h  JaegerNet_Types.h
Dependencies/installed/x64-windows/lib/: JaegerNetServer.lib  JaegerNetServerd.lib
Dependencies/installed/x64-windows/share/JaegerNetServer/: JaegerNetServerConfig.cmake  JaegerNetServerTargets-release.cmake  JaegerNetServerTargets.cmake
Dependencies/installed/x86-windows/include/JaegerNetServer/: JaegerNetServer_Exports.h  JaegerNet_Types.h
Dependencies/installed/x86-windows/lib/: JaegerNetServer.lib  JaegerNetServerd.lib
Dependencies/installed/x86-windows/share/JaegerNetServer/: JaegerNetServerConfigVersion.cmake  JaegerNetServerTargets-debug.cmake
Src/: CMakeLists.txt
Src/dll/: CMakeLists.txt  Module.cpp  Player.cpp  Player.h
Src/inc/: Constants.h  Logging.h
